<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".screen.onboarding.ThirdPage">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_half_horizontal"
        app:layout_constraintGuide_percent="0.7"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/iv_thirdpage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gl_half_horizontal"
        android:src="@drawable/thirdscreenfix"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:contentDescription="@string/first_screen_illustration" />

    <TextView
        android:id="@+id/tv_greetingthird"
        app:layout_constraintTop_toBottomOf="@id/gl_half_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:text="@string/meet_other_s_life"
        android:textStyle="italic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_finished_next"
        android:textColor="@color/orange_400"
        android:text="@string/finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>