<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.AddStoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_preview_user_story"
            app:srcCompat="@drawable/ic_round_image_24"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_half_vert"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_camera"
            app:layout_constraintTop_toBottomOf="@id/iv_preview_user_story"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_half_vert"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/camera"
            android:drawableLeft="@drawable/ic_baseline_camera_alt_24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_gallery"
            app:layout_constraintTop_toTopOf="@id/btn_camera"
            app:layout_constraintEnd_toStartOf="@id/guideline_half_vert"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:text="@string/gallery"
            android:drawableLeft="@drawable/ic_baseline_insert_photo_24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/btn_camera"
            app:layout_constraintStart_toStartOf="@id/btn_gallery"
            app:layout_constraintEnd_toEndOf="@id/btn_camera"
            android:layout_marginTop="12dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_description_story"
                 android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_upload"
            app:layout_constraintEnd_toEndOf="@id/btn_camera"
            app:layout_constraintStart_toStartOf="@id/btn_gallery"
            app:layout_constraintTop_toBottomOf="@id/tv_data_latitude"
            android:layout_marginTop="20dp"
            android:text="Upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_locate"
            app:layout_constraintTop_toBottomOf="@id/layout_edt"
            app:layout_constraintStart_toStartOf="@id/layout_edt"
            app:layout_constraintEnd_toStartOf="@id/guideline_half_vert"
            android:layout_marginTop="12dp"
            android:text="@string/add_location"
            android:drawableLeft="@drawable/ic_baseline_my_location_24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_latitude"
            android:text="@string/latitude"
            app:layout_constraintTop_toBottomOf="@id/btn_locate"
            app:layout_constraintStart_toStartOf="@id/btn_locate"
            android:layout_marginTop="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_data_latitude"
            android:text="@string/your_latitude_info"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline_half_vert"
            app:layout_constraintTop_toBottomOf="@id/tv_latitude"
            app:layout_constraintStart_toStartOf="@id/tv_latitude"/>

        <TextView
            android:id="@+id/tv_longitude"
            app:layout_constraintTop_toTopOf="@id/tv_latitude"
            app:layout_constraintStart_toEndOf="@id/guideline_half_vert"
            android:text="@string/longitude"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@id/btn_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_data_longitude"
            app:layout_constraintStart_toStartOf="@id/tv_longitude"
            app:layout_constraintEnd_toEndOf="@id/btn_upload"
            app:layout_constraintTop_toBottomOf="@id/tv_longitude"
            android:text="@string/your_longitude_info"
            android:maxLines="1"
            android:ellipsize="end"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


        <ImageView
            android:id="@+id/blackoverlay_add_story"
            android:src="@drawable/black_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="2dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/overlay_loading" />

        <ProgressBar
            android:id="@+id/pb_add_story"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/loading_add_story"
            app:constraint_referenced_ids="pb_add_story,blackoverlay_add_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>